--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,8 @@ jobs:
 
       - name: Build project
         run: npm run build
+        env:
+          BASE_URL: /minimal-portfolio/
 
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v4
