image tag latest

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -37,11 +37,13 @@ jobs:
 
       - name: Build image
         run: |
+          docker build . -t $REGISTRY/$REPOSITORY:latest
           docker build . -t $REGISTRY/$REPOSITORY:$IMAGE_TAG
 
       - name: Push image
         if: github.ref == 'refs/heads/main' && github.event_name != 'pull_request'
         run: |
+          docker push $REGISTRY/$REPOSITORY:latest
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
 
   deploy:
@@ -56,7 +58,6 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSHKEY }}
           envs: IMAGE_NAME,REGISTRY,{{ secrets.DIGITALOCEAN_ACCESS_TOKEN }},GITHUB_SHA
-          port: ${{ secrets.PORT }}
           script: |
             docker login -u ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }} -p ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }} registry.digitalocean.com
-            docker pull $REGISTRY/$IMAGE_NAME:$GITHUB_SHA
+            docker pull $REGISTRY/$IMAGE_NAME:latest
