--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -103,3 +103,8 @@ jobs:
             docker login -u ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }} -p ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }} registry.digitalocean.com
             docker stop $(docker ps -a -q) && docker rm $(docker ps -a -q) && docker rmi $(docker images -q) -f
             docker pull $REGISTRY/$IMAGE_NAME:latest
+            docker run -d \
+              -p 80:80 \
+              --restart=always \
+              --name $IMAGE_NAME \
+              $REGISTRY/$IMAGE_NAME:latest
